[package]
name = "slowhttp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version = "1.36.0", features = ["full"]}
log = "0.4.20"
simple_logger = "4.3.3"
bytes = "1.5.0"
chrono="0.4.34"
clap = "3.2.6"